--- a/css/styles.css
+++ b/css/styles.css
@@ -3152,20 +3152,20 @@ fieldset:disabled .btn {
 
 .btn-secondary {
   color: #fff;
-  background-color: #7464a1;
-  border-color: #7464a1;
+  background-color: #6c757d;
+  border-color: #adb5bd;
 }
 .btn-secondary:hover {
   color: #fff;
-  background-color: #635589;
-  border-color: #5d5081;
+  background-color: #495057;
+  border-color: #343a40;
 }
 .btn-check:focus + .btn-secondary,
 .btn-secondary:focus {
   color: #fff;
-  background-color: #635589;
-  border-color: #5d5081;
-  box-shadow: 0 0 0 0.25rem rgba(137, 123, 175, 0.5);
+  background-color: #343a40;
+  border-color: #212529;
+  box-shadow: 0 0 0 0.25rem rgba(123, 123, 123, 0.5);
 }
 .btn-check:checked + .btn-secondary,
 .btn-check:active + .btn-secondary,
@@ -3173,8 +3173,8 @@ fieldset:disabled .btn {
 .btn-secondary.active,
 .show > .btn-secondary.dropdown-toggle {
   color: #fff;
-  background-color: #5d5081;
-  border-color: #574b79;
+  background-color: #adb5bd;
+  border-color: #6c757d;
 }
 .btn-check:checked + .btn-secondary:focus,
 .btn-check:active + .btn-secondary:focus,
@@ -3186,8 +3186,8 @@ fieldset:disabled .btn {
 .btn-secondary:disabled,
 .btn-secondary.disabled {
   color: #fff;
-  background-color: #7464a1;
-  border-color: #7464a1;
+  background-color: #343a40;
+  border-color: #212529;
 }
 
 .btn-success {
@@ -5430,6 +5430,12 @@ fieldset:disabled .btn {
 }
 .alert-white .alert-link {
   color: #7a7a7a;
+}
+
+.alert > svg {
+  height: 16px;
+  width: 16px;
+  margin-right: 15px;
 }
 
 @-webkit-keyframes progress-bar-stripes {
@@ -12000,22 +12006,19 @@ body {
   }
 }
 
-
-
-
 .waves {
-  position:relative;
+  position: relative;
   width: 100%;
-  height:15vh;
+  height: 15vh;
   margin-bottom: none; /*Fix for safari gap*/
-  min-height:100px;
-  max-height:150px;
+  min-height: 100px;
+  max-height: 150px;
 }
 
 /* Animation */
 
 .parallax > use {
-  animation: move-forever 25s cubic-bezier(.55,.5,.45,.5)     infinite;
+  animation: move-forever 25s cubic-bezier(0.55, 0.5, 0.45, 0.5) infinite;
 }
 .parallax > use:nth-child(1) {
   animation-delay: -2s;
@@ -12035,23 +12038,23 @@ body {
 }
 @keyframes move-forever {
   0% {
-   transform: translate3d(-90px,0,0);
+    transform: translate3d(-90px, 0, 0);
   }
-  100% { 
-    transform: translate3d(85px,0,0);
+  100% {
+    transform: translate3d(85px, 0, 0);
   }
 }
 /*Shrinking for mobile*/
 @media (max-width: 768px) {
   .waves {
-    height:40px;
-    min-height:40px;
+    height: 40px;
+    min-height: 40px;
   }
   .content {
-    height:30vh;
+    height: 30vh;
   }
   h1 {
-    font-size:24px;
+    font-size: 24px;
   }
 }
 
