--- a/css/styles.css
+++ b/css/styles.css
@@ -11962,6 +11962,14 @@ body {
   .masthead .h2 {
     max-width: 30rem;
     font-size: 1.25rem;
+    margin: auto;
+    text-align: center;
+  }
+}
+
+@media (max-width: 992px) {
+  .about-text {
+    min-width: 100%;
   }
 }
 
